<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    tools:context=".about"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:paddingLeft="35dp">

    <Button
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:background="@drawable/exit"
        android:id="@+id/btn_exit"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true">

    <TextView
        android:layout_height="150dp"
        android:layout_width="320dp"
        android:paddingLeft="20dp"
        android:background="@drawable/back"
        android:paddingTop="45dp"
        android:paddingRight="20dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/aboutapp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="320dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/tentang_aplikasi"
        android:textStyle="bold"
        android:textColor="@color/purdy"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal" />

</FrameLayout>

    <TextView
        android:layout_height="20dp"
        android:layout_width="wrap_content"/>

    <FrameLayout
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true">

    <TextView
        android:layout_height="120dp"
        android:layout_width="320dp"
        android:paddingLeft="20dp"
        android:background="@drawable/back"
        android:paddingTop="45dp"
        android:paddingRight="20dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/aboutme"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="320dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="Tentang Developer"
        android:textStyle="bold"
        android:textColor="@color/purdy"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal" />

</FrameLayout>

</LinearLayout>